objects/Land_O_Lakes__c.object
<CustomObject>
    <fields>
        <fullName>LOLDivisions__c</fullName>
        <label>LOLDivisions</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_O_Lakes_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Land O Lakes Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_O_Lakes_PicklistDemo_del__c</fullName>
        <label>Land O Lakes Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value01</fullName>
                    <isActive>false</isActive>
                    <label>Value01</label>
                </value>
                <value>
                    <fullName>Value02</fullName>
                    <isActive>false</isActive>
                    <label>Value02</label>
                </value>
                <value>
                    <fullName>Value03</fullName>
                    <isActive>false</isActive>
                    <label>Value03</label>
                </value>
                <value>
                    <fullName>Value04</fullName>
                    <isActive>false</isActive>
                    <label>Value04</label>
                </value>
                <value>
                    <fullName>Value05</fullName>
                    <isActive>false</isActive>
                    <label>Value05</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_O_Lakes_Picklist__c</fullName>
        <label>Land O Lakes Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value01</fullName>
                    <isActive>false</isActive>
                    <label>Value01</label>
                </value>
                <value>
                    <fullName>Value02</fullName>
                    <isActive>false</isActive>
                    <label>Value02</label>
                </value>
                <value>
                    <fullName>Value03</fullName>
                    <isActive>false</isActive>
                    <label>Value03</label>
                </value>
                <value>
                    <fullName>Value04</fullName>
                    <isActive>false</isActive>
                    <label>Value04</label>
                </value>
                <value>
                    <fullName>Value05</fullName>
                    <isActive>false</isActive>
                    <label>Value05</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Land O Lakes</label>
    <nameField>
        <label>Land O Lakes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Land O Lakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>